throwing a RemoteException, which was already handled properly.

Now, the server will jump in and expunge the client from the server on
the server-side if the client notification takes longer than 15
seconds without completing the forceDisconnect network call, one way
or another.

This 15 second time period is set in the GanymedeSession.forceOff()
method.

-------------------- Changes from 0.99.9 to 1.0pre1 -------------------

RELEASE DATE: January 30, 2001

1. [SERVER] Reworked server synchronization logic

The GanymedeServer.login() method was vulnerable to a nested monitor
deadlock due to a section being synchronized on both the server's
GanymedeServer object and its DBStore object.

Basically, I was getting way too fancy in synchronizing on various
server objects instead of defining a proper semaphore class and using
that.

I added the loginSemaphore class, which takes care of everything
without my having to worry about n^2 different possible code paths.

I modified the admin console to report the login semaphore count for
each log entry.. this makes it easy to see at a glance how many users
are logged on for each log entry, and to insure that the semaphore
count is incremented and decremented properly under all circumstances.

In the process of all this, I realized that I was unnecessarily doing
a notifyAll() every time I did a synchronized operation on the
server's DBStore object.. I had misunderstood when it was necessary to
do a notify when I originally wrote a lot of this code.

The sweepInvids() and checkInvids() methods have been fixed so that
they are no longer synchronized on GanymedeServer but they do now
establish a dump lock on the server's database, to insure that the
object walk is done safely.

2. [SERVER] Added getBackLinks() method to the DBObject class

Martin Schneider <martin@ira.uka.de> reported that he needed to be
able to get the Vector of Invid's pointing to a given object through