@@ -15,8 +15,8 @@
 
    Created: 17 January 1997
    Release: $Name:  $
-   Version: $Revision: 1.224 $
-   Last Mod Date: $Date: 2001/02/08 08:12:22 $
+   Version: $Revision: 1.225 $
+   Last Mod Date: $Date: 2001/02/08 08:31:44 $
    Module By: Jonathan Abbey, jonabbey@arlut.utexas.edu, ARL:UT
 
    -----------------------------------------------------------------------
@@ -127,7 +127,7 @@ import arlut.csd.JDialog.*;
  * <p>Most methods in this class are synchronized to avoid race condition
  * security holes between the persona change logic and the actual operations.</p>
  * 
- * @version $Revision: 1.224 $ $Date: 2001/02/08 08:12:22 $
+ * @version $Revision: 1.225 $ $Date: 2001/02/08 08:31:44 $
  * @author Jonathan Abbey, jonabbey@arlut.utexas.edu, ARL:UT 
  */
 
@@ -982,6 +982,34 @@ final public class GanymedeSession extends UnicastRemoteObject implements Sessio
 
     Ganymede.debug("Forcing " + username + " off for " + reason);
 
+    // Construct a vector of invid's to place in the log entry we
+    // are about to create.  This lets us search the log easily.
+
+    Vector objects = new Vector();
+	    
+    if (userInvid != null)
+      {
+	objects.addElement(userInvid);
+      }
+    
+    if (personaInvid != null)
+      {
+	objects.addElement(personaInvid);
+      }
+    
+    if (Ganymede.log != null)
+      {
+	Ganymede.log.logSystemEvent(new DBLogEvent("abnormallogout",
+						   "Abnormal termination for username: " + username + "\n" +
+						   myReason,
+						   userInvid,
+						   username,
+						   objects,
+						   null));
+      }
+
+    logout(true);		// keep logout from logging a normal logout
+
     // spawn a new thread to try to kill off this client.. that way,
     // if the RMI call blocks indefinitely, we won't lock
     // GanymedeServer.clearIdleSessions(), or the like.
@@ -1001,101 +1029,9 @@ final public class GanymedeSession extends UnicastRemoteObject implements Sessio
 		// ok, they're already gone.. (?)
 	      }
 	  }
-
-	// we assume that once we have communicated with the client,
-	// we won't have to worry about the rest of this taking a
-	// particularly long time, so we'll go ahead and sync up to
-	// handle the logout.  if all of this takes too long, the
-	// join() below will expire and the spawning thread will
-	// also attempt to sync on forceLock and kick off the user,
-	// but we're not going to do anything which should take
-	// very long in this sync block.  certainly nothing which
-	// should involve communications with the client or admin
-	// consoles
-
-	synchronized (forceLock)
-	  {
-	    if (logged_in)
-	      {
-		// Construct a vector of invid's to place in the log entry we
-		// are about to create.  This lets us search the log easily.
-
-		Vector objects = new Vector();
-	    
-		if (userInvid != null)
-		  {
-		    objects.addElement(userInvid);
-		  }
-	    
-		if (personaInvid != null)
-		  {
-		    objects.addElement(personaInvid);
-		  }
-
-		if (Ganymede.log != null)
-		  {
-		    Ganymede.log.logSystemEvent(new DBLogEvent("abnormallogout",
-							       "Abnormal termination for username: " + username + "\n" +
-							       myReason,
-							       userInvid,
-							       username,
-							       objects,
-							       null));
-		  }
-
-		me.logout(true);		// keep logout from logging a normal logout
-	      }
-	  }
       }}, "Client Disconnector Thread");
 
     forceThread.start();
-
-    // if we get stuck talking to the client, go ahead and clean things
-    // up on the server side
-
-    try
-      {
-	forceThread.join(15000); // wait up to 15 seconds
-      }
-    catch (InterruptedException ex)
-      {
-      }
-
-    // okay, we have timed out on talking to the client.. if our
-    // communications thread has not successfully kicked the sent the
-    // client a disconnect message and logged the client out from the
-    // server, handle the server-side logout ourselves.
-
-    synchronized (forceLock)
-      {
-	if (logged_in)
-	  {
-	    Vector objects = new Vector();
-	    
-	    if (userInvid != null)
-	      {
-		objects.addElement(userInvid);
-	      }
-	    
-	    if (personaInvid != null)
-	      {
-		objects.addElement(personaInvid);
-	      }
-
-	    if (Ganymede.log != null)
-	      {
-		Ganymede.log.logSystemEvent(new DBLogEvent("abnormallogout",
-							   "Abnormal forced termination for username: " + username + "\n" +
-							   myReason,
-							   userInvid,
-							   username,
-							   objects,
-							   null));
-	      }
-	    
-	    me.logout(true);
-	  }
-      }
   }
 
   /**
